labels and flag

--- a/src/Zhaba/Makefile
+++ b/src/Zhaba/Makefile
@@ -1,6 +1,6 @@
 buildd:
 	g++ zhaba.cpp --std=c++20 -o zhaba
-	./zhaba test.zh
+	./zhaba test.zh --B
 
 build_fast:
 	g++ zhaba.cpp --std=c++20 -o zhaba -O3
