--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,7 @@
 cmake_minimum_required(VERSION 3.21)
-project(Zhaba_script_lang)
+project(zhaba)
 
 set(CMAKE_CXX_STANDARD 20)
-
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
-)
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-enable_testing()
 
 include_directories(src/compiler)
 include_directories(src/interpreter)
@@ -22,21 +12,8 @@ include_directories(src/tree_lib)
 include_directories(src/zhaba)
 include_directories(tests)
 
-add_executable(
-  misc
-  misc.cc
-)
-target_link_libraries(
-  misc
-  gtest_main
-)
 
-include(GoogleTest)
-gtest_discover_tests(misc)
-
-
-
-add_executable(Zhaba_script_lang
+add_executable(zhaba
         src/compiler/Compiler.hpp
         src/compiler/CompilerTables.hpp
         src/compiler/FileCompiler.hpp
@@ -94,3 +71,5 @@ add_executable(Zhaba_script_lang
         src/interpreter/bytecode.cpp
         src/interpreter/heap.cpp
         src/interpreter/stack.cpp)
+
+install(TARGETS zhaba)
