--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,63 +13,89 @@ include_directories(src/zhaba)
 include_directories(tests)
 
 
-add_executable(zhaba
-        src/compiler/Compiler.hpp
-        src/compiler/CompilerTables.hpp
-        src/compiler/FileCompiler.hpp
-        src/compiler/ToC.hpp
-        src/interpreter/bytecode.hpp
-        src/interpreter/heap.hpp
-        src/interpreter/instructions.hpp
-        src/interpreter/stack.hpp
-        src/interpreter/to_bytecode.hpp
-        src/interpreter/zhvm.hpp
-        src/lang/ast.hpp
-        src/lang/expression.hpp
-        src/lang/generics.hpp
-        src/lang/lang.hpp
-        src/lang/lang_tables.hpp
-        src/lang/scope.hpp
-        src/lang/syntax_tree.hpp
-        src/lang/token.cpp
-        src/lang/token.hpp
-        src/lang/types.hpp
-        src/lang/zhdata.hpp
-        src/libs/termcolor.hpp
-        src/parser/ast_parser.hpp
-        src/parser/definitions_parser.hpp
-        src/parser/expression_parser.hpp
-        src/parser/lexer.hpp
-        src/parser/parser.hpp
-        src/parser/parser_error.hpp
-        src/parser/preprocess.hpp
-        src/parser/syntax_tree_parser.hpp
-        src/parser/type_parser.hpp
-        src/tree_lib/Tree.hpp
-        src/tree_lib/TreePrinterASCII.hpp
-        src/tree_lib/TreeLib.hpp
-        src/zhaba/CmdOptios.hpp
-        src/lang/expression.cpp
-        src/lang/types.cpp
-        src/zhaba/zhaba.cpp
-        src/lang/ast.cpp
-        src/lang/generics.cpp
-        src/lang/syntax_tree.cpp
-        src/parser/parser_error.cpp
-        src/lang/zhdata.cpp
-        src/lang/lang_tables.cpp
-        src/interpreter/runtime_error.cpp
-        src/interpreter/runtime_error.hpp
-        src/parser/type_parser.cpp
-        src/parser/syntax_tree_parser.cpp
-        src/parser/definitions_parser.cpp
-        src/parser/expression_parser.cpp
-        src/parser/ast_parser.cpp
-        src/parser/lexer.cpp
-        src/parser/preprocess.cpp
-        src/interpreter/to_bytecode.cpp
-        src/interpreter/bytecode.cpp
-        src/interpreter/heap.cpp
-        src/interpreter/stack.cpp)
+set(lib          
+  src/compiler/Compiler.hpp
+  src/compiler/CompilerTables.hpp
+  src/compiler/FileCompiler.hpp
+  src/compiler/ToC.hpp
+  src/interpreter/bytecode.hpp
+  src/interpreter/heap.hpp
+  src/interpreter/instructions.hpp
+  src/interpreter/stack.hpp
+  src/interpreter/to_bytecode.hpp
+  src/interpreter/zhvm.hpp
+  src/lang/ast.hpp
+  src/lang/expression.hpp
+  src/lang/generics.hpp
+  src/lang/lang.hpp
+  src/lang/lang_tables.hpp
+  src/lang/scope.hpp
+  src/lang/syntax_tree.hpp
+  src/lang/token.cpp
+  src/lang/token.hpp
+  src/lang/types.hpp
+  src/lang/zhdata.hpp
+  src/libs/termcolor.hpp
+  src/parser/ast_parser.hpp
+  src/parser/definitions_parser.hpp
+  src/parser/expression_parser.hpp
+  src/parser/lexer.hpp
+  src/parser/parser.hpp
+  src/parser/parser_error.hpp
+  src/parser/preprocess.hpp
+  src/parser/syntax_tree_parser.hpp
+  src/parser/type_parser.hpp
+  src/tree_lib/Tree.hpp
+  src/tree_lib/TreePrinterASCII.hpp
+  src/tree_lib/TreeLib.hpp
+  src/zhaba/CmdOptios.hpp
+  src/lang/expression.cpp
+  src/lang/types.cpp
+  src/lang/ast.cpp
+  src/lang/generics.cpp
+  src/lang/syntax_tree.cpp
+  src/parser/parser_error.cpp
+  src/lang/zhdata.cpp
+  src/lang/lang_tables.cpp
+  src/interpreter/runtime_error.cpp
+  src/interpreter/runtime_error.hpp
+  src/parser/type_parser.cpp
+  src/parser/syntax_tree_parser.cpp
+  src/parser/definitions_parser.cpp
+  src/parser/expression_parser.cpp
+  src/parser/ast_parser.cpp
+  src/parser/lexer.cpp
+  src/parser/preprocess.cpp
+  src/interpreter/to_bytecode.cpp
+  src/interpreter/bytecode.cpp
+  src/interpreter/heap.cpp
+  src/interpreter/stack.cpp)
+
+add_executable(zhaba ${lib} src/zhaba/zhaba.cpp)
 
 install(TARGETS zhaba)
+
+# ------------------- TESTS -------------------
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+
+add_executable(
+  zhaba_test
+   ${lib} tests/misc.cpp
+)
+target_link_libraries(
+  zhaba_test
+  gtest_main
+)
+
+include(GoogleTest)
+gtest_discover_tests(zhaba_test)
