--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,25 +78,25 @@ install(TARGETS zhaba)
 
 # ------------------- TESTS -------------------
 
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
-)
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
+# include(FetchContent)
+# FetchContent_Declare(
+#   googletest
+#   URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
+# )
+# # For Windows: Prevent overriding the parent project's compiler/linker settings
+# set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+# FetchContent_MakeAvailable(googletest)
 
-enable_testing()
+# enable_testing()
 
-add_executable(
-  zhaba_test
-   ${lib} tests/misc.cpp
-)
-target_link_libraries(
-  zhaba_test
-  gtest_main
-)
+# add_executable(
+#   zhaba_test
+#    ${lib} tests/misc.cpp
+# )
+# target_link_libraries(
+#   zhaba_test
+#   gtest_main
+# )
 
-include(GoogleTest)
-gtest_discover_tests(zhaba_test)
+# include(GoogleTest)
+# gtest_discover_tests(zhaba_test)
