--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -22,16 +22,16 @@ jobs:
             cc: "cl", cxx: "cl",
             environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
           }
-        # - {
-        #     name: "Windows Latest MinGW", artifact: "Windows-MinGW.7z",
-        #     os: windows-latest,
-        #     cc: "gcc", cxx: "g++"
-        #   }
-        # - {
-        #     name: "Ubuntu Latest GCC", artifact: "Linux.7z",
-        #     os: ubuntu-latest,
-        #     cc: "gcc", cxx: "g++"
-        #   }
+        - {
+            name: "Windows Latest MinGW", artifact: "Windows-MinGW.7z",
+            os: windows-latest,
+            cc: "gcc", cxx: "g++"
+          }
+        - {
+            name: "Ubuntu Latest GCC", artifact: "Linux.7z",
+            os: ubuntu-latest,
+            cc: "gcc", cxx: "g++"
+          }
         - {
             name: "macOS Latest Clang", artifact: "macOS.7z",
             os: macos-latest,
