--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -40,7 +40,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-
+  shell: bash
+    - name: Install dependencies on ubuntu10
+      if: startsWith(matrix.config.name, 'Ubuntu Latest GCC')
+      run: |
+        sudo apt update
+        sudo apt install gcc-10 g++-10
     - name: Download Ninja and CMake
       shell: cmake -P {0}
       run: |
