--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -42,6 +42,7 @@ jobs:
     - uses: actions/checkout@v1
   shell: bash
     - name: Install dependencies on ubuntu10
+      shell: bash
       if: startsWith(matrix.config.name, 'Ubuntu Latest GCC')
       run: |
         sudo apt update
