--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -25,12 +25,12 @@ jobs:
         - {
             name: "Windows Latest MinGW", artifact: "Windows-MinGW.7z",
             os: windows-latest,
-            cc: "gcc", cxx: "g++10"
+            cc: "gcc-10", cxx: "g++-10"
           }
         - {
             name: "Ubuntu Latest GCC", artifact: "Linux.7z",
             os: ubuntu-latest,
-            cc: "gcc", cxx: "g++10"
+            cc: "gcc-10", cxx: "g++-10"
           }
         - {
             name: "macOS Latest Clang", artifact: "macOS.7z",
@@ -47,7 +47,7 @@ jobs:
       run: |
         sudo apt update
         sudo apt install gcc-10 g++-10
-        
+
     - name: Download Ninja and CMake
       shell: cmake -P {0}
       run: |
