--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -25,7 +25,7 @@ jobs:
         - {
             name: "Windows Latest MinGW", artifact: "Windows-MinGW.7z",
             os: windows-latest,
-            cc: "gcc-10", cxx: "g++-10"
+            cc: "gcc", cxx: "g++"
           }
         - {
             name: "Ubuntu Latest GCC", artifact: "Linux.7z",
@@ -47,6 +47,12 @@ jobs:
       run: |
         sudo apt update
         sudo apt install gcc-10 g++-10
+
+    - name: Install dependencies on Windows
+      shell: bash
+      if: startsWith(matrix.config.name, 'Windows Latest MSVC')
+      run: |
+        pacman -Syu
 
     - name: Download Ninja and CMake
       shell: cmake -P {0}
