--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -49,7 +49,7 @@ jobs:
         sudo apt install gcc-10 g++-10
 
     - name: Install dependencies on Windows
-      if: startsWith(matrix.config.name, 'Windows Latest MSVC')
+      if: startsWith(matrix.config.name, 'Windows Latest MinGW')
       run: |
         pacman -Syu
 
