--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -16,17 +16,17 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        # - {
-        #     name: "Windows Latest MSVC", artifact: "Windows-MSVC.7z",
-        #     os: windows-latest,
-        #     cc: "cl", cxx: "cl",
-        #     environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
-        #   }
         - {
-            name: "Windows Latest MinGW", artifact: "Windows-MinGW.7z",
-            os: windows-2022,
-            cc: "gcc", cxx: "g++"
+            name: "Windows Latest MSVC", artifact: "Windows-MSVC.7z",
+            os: windows-latest,
+            cc: "cl", cxx: "cl",
+            environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
           }
+        # - {
+        #     name: "Windows Latest MinGW", artifact: "Windows-MinGW.7z",
+        #     os: windows-2022,
+        #     cc: "gcc", cxx: "g++"
+        #   }
         - {
             name: "Ubuntu Latest GCC", artifact: "Linux.7z",
             os: ubuntu-latest,
@@ -40,6 +40,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+
+    - name: Install dependencies on ubuntu10
+      if: startsWith(matrix.config.name, 'windows')
+      run: |
+        choco upgrade mingw
 
     - name: Install dependencies on ubuntu10
       shell: bash
