--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -47,18 +47,8 @@ jobs:
             os: ubuntu-latest,
             artifact: "ubuntu_gcc.7z",
             build_type: "Release",
-            cc: "gcc",
-            cxx: "g++",
-            archiver: "7z a",
-            generators: "Ninja"
-          }
-        - {
-            name: "Ubuntu_GCC_9",
-            os: ubuntu-latest,
-            artifact: "ubuntu_gcc9.7z",
-            build_type: "Release",
-            cc: "gcc",
-            cxx: "g++",
+            cc: "gcc-10",
+            cxx: "g++-10",
             archiver: "7z a",
             generators: "Ninja"
           }
@@ -97,41 +87,8 @@ jobs:
           ninja --version
           cmake --version
           gcc --version
-      - name: Install dependencies on ubuntu9
-        if: startsWith(matrix.config.name, 'Ubuntu_GCC_9')
-        run: |
-          echo Update gcc-9 =======================================================================
-          echo gcc version before
-          gcc --version
-          sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-          sudo apt-get update
-          sudo apt-get install ninja-build cmake gcc-9 g++-9
-          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 90 --slave /usr/bin/g++ g++ /usr/bin/g++-9 --slave /usr/bin/gcov gcov /usr/bin/gcov-9
-          echo gcc version after
-          gcc --version
-          echo Update ninja =======================================================================
-          echo ninja version before
-          ninja --version
-          # wget https://github.com/ninja-build/ninja/releases/download/v1.10.0/ninja-linux.zip
-          wget https://github.com/ninja-build/ninja/releases/latest/download/ninja-linux.zip
-          sudo unzip ninja-linux.zip -d /usr/local/bin/
-          sudo update-alternatives --install /usr/bin/ninja ninja /usr/local/bin/ninja 1 --force
-          echo ninja version after
-          ninja --version
-          echo Update cmake =======================================================================
-          echo cmake version before
-          cmake --version
-          # curl --silent "https://api.github.com/repos/Kitware/CMake/releases/latest" | sed -n 's/.*tag_name":\s"\(.*\)".*/\1/p' | head -2
-          # wget https://github.com/Kitware/CMake/releases/latest/download/cmake-3.16.5-Linux-x86_64.sh
-          cmake_version=$(curl --silent "https://api.github.com/repos/Kitware/CMake/releases/latest" | sed -n 's/.*tag_name":\s"\(.*\)".*/\1/p' | head -2 | cut -c 2-)
-          echo cmake download latest v$cmake_version version
-          wget https://github.com/Kitware/CMake/releases/download/v$cmake_version/cmake-$cmake_version-Linux-x86_64.sh
-          chmod +x cmake-$cmake_version-Linux-x86_64.sh
-          sudo mkdir /opt/cmake
-          sudo ./cmake-$cmake_version-Linux-x86_64.sh --prefix=/opt/cmake --skip-license
-          sudo update-alternatives --install /usr/bin/cmake cmake /opt/cmake/bin/cmake 1 --force
-          echo cmake version after
-          cmake --version
+          sudo apt update
+          sudo apt install gcc-10 g++-10
       - name: Install dependencies on macos
         if: startsWith(matrix.config.os, 'macos')
         run: |
