--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,18 +88,18 @@ install(TARGETS zhaba)
 
 # ------------------- TESTS -------------------
 
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
-)
+# FetchContent_Declare(
+#   googletest
+#   URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
+# )
 
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
+# set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+# FetchContent_MakeAvailable(googletest)
 
-enable_testing()
+# enable_testing()
 
-add_executable(zhaba_test ${lib} tests/test.cpp)
-target_link_libraries(zhaba_test PRIVATE nlohmann_json::nlohmann_json gtest_main)
+# add_executable(zhaba_test ${lib} tests/test.cpp)
+# target_link_libraries(zhaba_test PRIVATE nlohmann_json::nlohmann_json gtest_main)
 
-include(GoogleTest)
-gtest_discover_tests(zhaba_test)
+# include(GoogleTest)
+# gtest_discover_tests(zhaba_test)
